# agentic_rag_long_document

./: .gitignore  ES_OPERATIONS.md  LICENSE  README.md  README_CN.md  main.py  pyproject.toml  titleParser.py
app/: __init__.py  agent.py  config.py  elasticsearch_client.py  embedding_client.py  llm_client.py  main.py  mineru_parser.py  models.py  section_parser.py  tools.py
tests/: __init__.py  test_basic_setup.py
